# sort-for-short-array

./: Cargo.toml  LICENSE  README.md
benches/: sort.rs
src/: lib.rs  sorting_network.rs
