[package]
name = "sort-for-short-array"
version = "0.1.0"
authors = ["Nakayama Daiju <42.daiju@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "*"

[[bench]]
name = "sort"
harness = false
